--- a/hcgcad/hcgcad.csproj
+++ b/hcgcad/hcgcad.csproj
@@ -52,9 +52,11 @@
     <Compile Include="FormViewer.Designer.cs">
       <DependentUpon>FormViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="GIF.cs" />
     <Compile Include="Graphics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility.cs" />
     <EmbeddedResource Include="FormViewer.resx">
       <DependentUpon>FormViewer.cs</DependentUpon>
     </EmbeddedResource>
