--- a/hcgcad/hcgcad.csproj
+++ b/hcgcad/hcgcad.csproj
@@ -53,7 +53,7 @@
       <DependentUpon>FormViewer.cs</DependentUpon>
     </Compile>
     <Compile Include="GIF.cs" />
-    <Compile Include="Graphics.cs" />
+    <Compile Include="Render.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility.cs" />
